--- a/index.html
+++ b/index.html
@@ -6,12 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SECCIÓN 4</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="">
 </head>
 <body>
     <header>
         <div class="logotipo">
-            <img src="assets/MARCA-DE-AGUA.png" alt="logotipo-harimezume" style="width: 370px; height: 370px; text-align: center; display: block;">
+            <img src="assets/MARCA-DE-AGUA.png" width="50px" height="50px" alt="logotipo-harimezume">
+            <h2 class="encabezado">HARIZUMICE STUDIOS</h2>
         </div>
+        <hr>
+        <nav>
+            <h2>
+                <a href="" class="nalink">INICIO</a>
+                <a href="" class="nalink">SOBRE NOSOTROS</a>
+                <a href="" class="nalink">REDES SOCIALES</a>
+            </h2>
+        </nav>
     </header>
+    
+    <h2>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, blanditiis. Iusto reprehenderit inventore itaque mollitia nulla dolorum doloribus iure excepturi? Totam nesciunt in quisquam dicta ipsa magni similique odit dolor?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium architecto voluptas facilis quam provident, dolor earum, unde vitae aliquid, modi perspiciatis. Ipsum asperiores ipsa dolore repellat ratione distinctio. Iste, quas?
+    </h2>
 </body>
 </html>
